# icon-themeify

./: .gitignore  README.md  cli.py  pyproject.toml
example/: themes.json
src/themeify/: core.py  theme.py
